--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   get: ^4.7.2
+  flutter_thermal_printer: ^1.2.1+1
+  firebase_core: ^3.15.1
 
 dev_dependencies:
   flutter_test:
