--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   firebase_core: ^3.15.1
   cloud_firestore: ^5.6.12
   json_annotation: ^4.9.0
+  image_picker: ^1.1.2
+  flutter_local_notifications: ^19.4.0
 
 dev_dependencies:
   flutter_test:
